<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_nav_home" />

    <item
        android:id="@+id/navigaton_device"
        android:icon="@drawable/ic_device"
        android:title="@string/title_nav_phone" />

    <item
        android:id="@+id/navigaton_rom"
        android:icon="@drawable/ic_rom"
        android:title="@string/title_nav_rom" />

    <item
        android:id="@+id/navigation_tutorial"
        android:icon="@drawable/ic_tutorial"
        android:title="@string/title_nav_tutorial" />

    <item
        android:id="@+id/navigaton_about"
        android:icon="@drawable/ic_info"
        android:title="@string/title_nav_about" />


</menu>
