<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="2dp"
        app:cardMaxElevation="3dp"
        app:cardCornerRadius="3dp"
        app:cardBackgroundColor="@color/bgui">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/imgMagisk"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/logowr"
                android:foreground="@drawable/bg_card_home"
                android:contentDescription="@string/img_description_home" />

            <TextView
                android:id="@+id/txtMagiskStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/bg_status_card_home"
                android:textAlignment="viewEnd"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:layout_alignEnd="@+id/imgMagisk"
                android:textSize="@dimen/title_card_status"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/magisk_status"
                android:fontFamily="@font/cocogoose"
                android:paddingBottom="2dp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/txtMagiskVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_alignBottom="@+id/imgMagisk"
                android:textSize="@dimen/title_card_home"
                android:text="@string/magisk_download"
                android:fontFamily="@font/gilroybold"
                android:paddingBottom="3dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
