<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="5dp"
        app:cardBackgroundColor="@color/bgui">

        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="5dp"
                android:background="@color/bgui">

                <ImageView
                    android:id="@+id/imgPhone"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/logowr"
                    android:contentDescription="@string/img_description_device" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@id/imgPhone"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/name_list_device"
                        android:text="@string/nama_model"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/gilroybold" />

                    <TextView
                        android:id="@+id/txtCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="right"
                        android:layout_toEndOf="@id/txtName"
                        android:fontFamily="@font/roboto_regular"
                        android:textStyle="bold"
                        android:text="@string/nama_kode"
                        android:textColor="@color/steelblue"
                        android:textSize="@dimen/code_list_device"
                        tools:ignore="RtlHardcoded" />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>