<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bgui"
    tools:context=".ui.DetailRomActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="3dp"
            app:cardCornerRadius="3dp"
            app:cardBackgroundColor="@color/bgui">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_curved_detail"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:paddingBottom="15dp"
                    tools:ignore="UselessParent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgLogo"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="9dp"
                        android:scaleType="centerCrop"
                        android:padding="5dp"/>

                    <TextView
                        android:id="@+id/txtNama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="33dp"
                        android:layout_marginEnd="26dp"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@+id/imgLogo"
                        android:fontFamily="@font/gilroybold"
                        android:text="@string/detail_nama"
                        android:textColor="@color/white"
                        android:textSize="28sp" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="3dp"
            app:cardCornerRadius="3dp"
            app:cardBackgroundColor="@color/bgui">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="25dp"
                android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtDev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_dev"
                        android:textSize="20sp"
                        android:textColor="@color/mainui"
                        android:fontFamily="@font/gilroybold"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" />

                    <TextView
                        android:id="@+id/txtIsiDev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:textSize="18sp"
                        android:textColor="@color/txtui"
                        android:fontFamily="@font/gilroybold"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" />

                    <TextView
                        android:id="@+id/txtDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_desc"
                        android:textSize="20sp"
                        android:textColor="@color/mainui"
                        android:fontFamily="@font/gilroybold"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" />

                    <TextView
                        android:id="@+id/txtIsiDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:elegantTextHeight="true"
                        android:textColor="@color/txtui"
                        android:fontFamily="@font/gilroybold"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" />


                <TextView
                        android:id="@+id/txtWeb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_web"
                        android:textSize="20sp"
                        android:textColor="@color/mainui"
                        android:fontFamily="@font/gilroybold"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" />

                    <TextView
                        android:id="@+id/txtIsiWeb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:autoLink="web"
                        android:textColor="@color/txtui"
                        android:elegantTextHeight="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" />


                <Button
                    android:id="@+id/btnDownload"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/bg_btn_grad"
                    android:padding="11dp"
                    android:text="@string/download_rom"
                    android:textColor="@color/mainui"
                    android:textSize="16sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>